--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       POSTGRES_PASSWORD: ${DB_PASS} 
       POSTGRES_DB: ${DB_NAME}
     ports:
+      #- "${DB_PORT}:5432"
       - "${DB_PORT}:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
