--- a/supervisord.conf
+++ b/supervisord.conf
@@ -10,7 +10,8 @@ stderr_logfile=/dev/stderr
 stdout_logfile=/dev/stdout
 
 [program:streamlit]
-command=streamlit run front/app.py --server.port=8051
+#command=streamlit run front/app.py --server.port=8051
+command=streamlit run front/newapp.py --server.port=8051
 environment=PYTHONPATH=/app
 autostart=true
 autorestart=true
